--- a/index.html
+++ b/index.html
@@ -26,6 +26,37 @@
             <input type="search" name="search" placeholder="Search...">
         
     </nav>
-
+    <section>
+        <div class="box">
+        <div class="image-container">
+            <img src="images/image 2.png">
+        </div>
+            <div class="info">
+            <h2>Places To Visit</h2>
+            <p>Egypt beckons with iconic Pyramids of Giza, Sphinx, Luxor's ancient marvels, Cairo's Egyptian Museum, Aswan's High Dam, Abu Simbel's temples, Alexandria's rich history, and Red Sea resorts for sun and sea adventures. Discover Egypt's timeless allure.</p>
+        </div>
+    </div>
+        <div class="box">
+            <div class="image-container">
+            <img src="images/image 3.png">
+        </div>
+            <div class="info">
+            <h2>Transports</h2>
+            <p>Explore with ease! Our company provides a variety of buses for all travel needs — from spacious coaches for groups to sleek shuttles. Enjoy a smooth journey in our reliable and well-maintained fleet making your travel experience with us both convenient and memorable.</p>
+        </div>
+    </div>
+        <div class="box">
+            <div class="image-container">
+            <img src="images/image 4.png">
+        </div>
+            <div class="info">
+            <h2>Food</h2>
+            <p>Indulge in our travel experience with delightful food service. Our trips company offers a curated menu of delicious meals, ensuring you savor every moment of your journey. From snacks to gourmet treats, we provide a culinary journey that complements your travel adventure seamlessly.</p>
+        </div>
+    </div>
+    <div class="button-container">
+    <button>Book Now</button>
+    </div>
+    </section>
 </body>
 </html>
