--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>E-tours</title>
     <link rel="icon" href="images/Logo.png">
     <link rel="stylesheet" href="css/homeStyle.css">
-
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&family=Kanit:wght@300&family=Lato&family=Roboto:wght@500&family=Rubik:wght@500&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=Jomhuria&family=Kalam&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -26,6 +29,26 @@
             <input type="search" name="search" placeholder="Search...">
         
     </nav>
+
+    <section>
+        <div class="image">
+            <img src="images/Main.png" >
+        </div>
+        <div class="welcom">
+           <p> Welcom to <br> E-TOURS</p>
+        </div>
+        <div class="pargraph">
+            <p>
+                Embark on a journey of a lifetime with NileQuest Travel, 
+                your expert guide to the treasures of <br>Egypt. Discover the ancient wonders of the pyramids, 
+                sail the legendary Nile, and unwind on <br>the sun-kissed beaches of the Red Sea.
+                 Our carefully curated packages,
+                  knowledgeable guides,<br> and seamless experiences ensure an unforgettable adventure.
+            </p>
+            <input type="button" value="learn more">
+        </div>
+       </section>
+
 
 </body>
 </html>
