--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-tours</title>
-    <link rel="icon" href="images/Logo.png">
+    <link rel="icon" href="images/LogoC.png">
     <link rel="stylesheet" href="css/homeStyle.css">
-    <link href="https://fonts.googleapis.com/css2?family=Jockey+One&family=Kanit:wght@300&family=Lato&family=Roboto:wght@500&family=Rubik:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Jockey+One&family=Kanit:wght@300&family=Kaushan+Script&family=Lato&family=Roboto:wght@500&family=Rubik:wght@500&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
+
     <nav>
         <img src="images/Logo.png">
-        
+
         <div class="NavBar">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -20,14 +27,124 @@
                 <li><a href="#">Login</a></li>
             </ul>
         </div>
-            <div class="searchDiv">
-                <form action="#" class="searchInput">
-                    <input type="search" name="search" placeholder="Search...">
-                    <button type="submit"><img src="images/Search.png" ></button>
-                </form>
-            </div>
-        
+        <div class="searchDiv">
+            <form action="#" class="searchInput">
+                <input type="search" name="search" placeholder="Search...">
+                <button type="submit"><img src="images/Search.png"></button>
+            </form>
+        </div>
     </nav>
+    <div class="mainContainer">
+        <div class="blurDiv1">
+            <h1 id="welcome">Welcome to</h1>
+            <h1 id="etours">E-Tours</h1>
+        </div>
+        <div class="blurDiv2">
+            Embark on a journey of a lifetime with NileQuest Travel, your expert guide to the treasures of Egypt.
+            Discover the ancient wonders of the pyramids, sail the legendary Nile, and unwind on the sun-kissed beaches
+            of the Red Sea. Our carefully curated packages, knowledgeable guides, and seamless experiences ensure an
+            unforgettable adventure.
+            <br>
+            <form action="#">
+                <button type="submit">
+                    Learn more
+                </button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Khaled section -->
+    <section>
+        <div class="sectionContainer">
+            <!-- add -->
+            <div class="box">
+                <div class="image-container">
+                    <img src="images/image 2.png">
+                </div>
+                <div class="info">
+                    <h2>Places To Visit</h2>
+                    <p>Egypt beckons with iconic Pyramids of Giza, Sphinx, Luxor's ancient marvels, Cairo's Egyptian
+                        Museum,
+                        Aswan's High Dam, Abu Simbel's temples, Alexandria's rich history, and Red Sea resorts for sun
+                        and
+                        sea adventures. Discover Egypt's timeless allure.</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image-container">
+                    <img src="images/image 3.png">
+                </div>
+                <div class="info">
+                    <h2>Transports</h2>
+                    <p>Explore with ease! Our company provides a variety of buses for all travel needs — from spacious
+                        coaches for groups to sleek shuttles. Enjoy a smooth journey in our reliable and well-maintained
+                        fleet making your travel experience with us both convenient and memorable.</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image-container">
+                    <img src="images/image 4.png">
+                </div>
+                <div class="info">
+                    <h2>Food</h2>
+                    <p>Indulge in our travel experience with delightful food service. Our trips company offers a curated
+                        menu of delicious meals, ensuring you savor every moment of your journey. From snacks to gourmet
+                        treats, we provide a culinary journey that complements your travel adventure seamlessly.</p>
+                </div>
+            </div>
+            <div class="button-container">
+                <button>Book Now</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Toaa -->
+
+    <footer>
+        <div class="comp1">
+            <h4>About the company:</h4><br>
+            <p>Explore Egypt with Egypt Explorer<br> Tours. Unveil ancient wonders,<br>cruise the Nile, and create
+                lasting<br> memories. Tailored adventures for every traveler.</p>
+        </div>
+        <div class="comp2">
+            <h4>Company:</h4><br>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Tours & Packages</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
+        <div class="comp3">
+            <h4>Contact:</h4><br>
+            <ul>
+                <li>Phone:<br>+20 108 164 1851</li>
+                <li>Gmail:<br><a href="mailto:etours@gmail.com">etours@gmail.com</a></li>
+                <li>Location:<br>10th of ramadan</li>
+            </ul>
+        </div>
+        <div class="social">
+            <h4>Follow us:</h4><br>
+            <ul>
+                <li><a href="https://instagram.com" target="_blank"><img src="images/instagram.png" width="50px"
+                            ></a></li>&nbsp;&nbsp;&nbsp;
+                <li><a href="https://facebook.com" target="_blank"><img src="images/Facebook.png" width="50px"
+                            ></a></li><br>
+                <li><a href="https://x.com" target="_blank"><img src="images/X.png" width="50px"></a></li>
+                &nbsp;&nbsp;&nbsp;
+                <li><a href="https://gmail.com" target="_blank"><img src="images/Gmail.png" width="50px"
+                            ></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <div class="copy">
+        <p>&copy;2023 E-Tours | All rights reserved</p>
+    </div>
+
+
 
 </body>
+
 </html>
