--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <ul>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">Tours &mp; Packages</a></li>
+          <li><a href="#">Tours &amp; Packages</a></li>
           <li><a href="#">Terms of Service</a></li>
           <li><a href="#">Privacy Policy</a></li>
         </ul>
