--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-tours</title>
-    <link rel="icon" href="images/LogoC.png" />
+    <link rel="icon" href="images/Logo.png" />
     <link rel="stylesheet" href="css/homeStyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -146,25 +146,25 @@
         <ul>
           <li>
             <a href="https://instagram.com" target="_blank"
-              ><img src="images/instagram.png" width="50px"
+              ><img src="images/instagram.png" width="55px"
             /></a>
           </li>
           &nbsp;&nbsp;&nbsp;
           <li>
             <a href="https://facebook.com" target="_blank"
-              ><img src="images/Facebook.png" width="50px"
+              ><img src="images/Facebook.png" width="55px"
             /></a>
           </li>
           <br />
           <li>
             <a href="https://x.com" target="_blank"
-              ><img src="images/X.png" width="50px"
+              ><img src="images/X.png" width="55px"
             /></a>
           </li>
           &nbsp;&nbsp;&nbsp;
           <li>
             <a href="https://gmail.com" target="_blank"
-              ><img src="images/Gmail.png" width="50px"
+              ><img src="images/Gmail.png" width="55px"
             /></a>
           </li>
         </ul>
