--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-tours</title>
-    <link rel="icon" href="images/Icon.png" />
+    <title>E-tours - Login</title>
+    <link rel="icon" href="../images/Icon.png" />
     <link rel="stylesheet" href="../css/sign-in.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,90 +16,13 @@
 
   <body>
     <div class="container">
-      <header>
-        <img class="logo" src="../images/Logo.png" />
-
-        <div class="HeaderBar">
-          <ul>
-            <li class="e"><a href="#">Home</a></li>
-            <li class="e"><a href="#">Services</a></li>
-            <li class="e"><a href="#">Tours</a></li>
-            <li class="e"><a href="#">Contact us</a></li>
-          </ul>
-        </div>
-        <ul>
-          <li class="login"><a href="#">Login</a></li>
-          <li class="signup"><a href="#">Signup</a></li>
-        </ul>
-
-        <div class="searchDiv">
-          <form action="#" class="searchInput">
-            <input type="search" name="search" placeholder="Search..." />
-            <button type="submit"><img src="../images/Search.png" /></button>
-          </form>
-        </div>
-      </header>
-
-      <!-- Type your code here -->
-    </div>
-    <footer>
-      <div class="container">
-        <div class="f1">
-          <h1>About the company:</h1>
-          <p>
-            Explore Egypt with Egypt Explorer Tours. Unveil ancient wonders,
-            cruise the Nile, and create lasting memories. Tailored adventures
-            for every traveler.
-          </p>
-        </div>
-        <div class="f2">
-          <h1>Company:</h1>
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Tours &amp; Packages</a></li>
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-          </ul>
-        </div>
-        <div class="f3">
-          <h1>Contact:</h1>
-          <ul>
-            <li>Phone:<br />+20 108 164 1851</li>
-            <li>Gmail:<br /><a>etours@gmail.com</a></li>
-            <li>Location:<br />10th of ramadan</li>
-          </ul>
-        </div>
-        <div class="f4">
-          <h1>Follow us:</h1>
-          <ul>
-            <li>
-              <a href="https://instagram.com" target="_blank"
-                ><img src="../images/instagram.png"
-              /></a>
-            </li>
-            <li>
-              <a href="https://facebook.com" target="_blank"
-                ><img src="../images/Facebook.png"
-              /></a>
-            </li>
-            <br />
-            <li>
-              <a href="https://x.com" target="_blank"
-                ><img src="../images/X.png"
-              /></a>
-            </li>
-            <li>
-              <a href="https://gmail.com" target="_blank"
-                ><img src="../images/Gmail.png"
-              /></a>
-            </li>
-          </ul>
-        </div>
+      <div class="logo">
+        <img src="../images/Logo.png" >
       </div>
-    </footer>
-    <div class="rights">
-      <p>&copy;2023 E-Tours | All rights reserved</p>
+        
+      <!-- Type your code here -->
+
     </div>
+
   </body>
 </html>
