--- a/pages/About-us.html
+++ b/pages/About-us.html
@@ -143,7 +143,7 @@
           <div>
             <div class="cycle">
               <img src="../images/About us/House.png" height="100px" />
-              <p>Quality<br />Accommodations</p>
+              <p style="font-size: 1rem;">Quality<br />Accommodations</p>
             </div>
             <p>
               We carefully select<br />
