Sign up-in pages

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -19,10 +19,58 @@
       <div class="logo">
         <img src="../images/Logo.png" >
       </div>
-        
-      <!-- Type your code here -->
+
+      <div class="login">
+        <div id ="hedder">
+          <img  src="..\images\login\login.png">
+        </div>
+
+        <p> Sign in </p>
+
+        <div class="inputs">
+          <input id="Email" type="email" placeholder="Email" required> <br>
+          <input id="password" type="password" placeholder="Password" required ><br>
+          <a href="https://fonts.googleapis.com">Forgot Password?</a><br>
+          <input id="S-in" type="submit" value="Login">
+        </div>
+
+        <div class="line">
+          <hr id="top">
+          <p >OR</p>
+          <hr id="bottom">
+        </div>
+
+        <div id="text">
+          <p>sing in using social networks</p>
+        </div>
+
+        <div class="google">
+          <img src="..\images\login\GoogleIcon.png">
+        </div>
+
+           <div id="google">
+            <a href="#">Cotinue with Google </a>          <br>
+           </div>
+
+        <div class="apple">
+          <img src="..\images\login\AppleIcon.png">
+        </div>
+
+           <div id="apple">
+            <a href="#">Cotinue with Apple </a> 
+           </div>
+
+           <div id="go">
+           <span>no account?</span>
+           <a href="#">Sign up</a>
+           </div>
+
+       </div>
+      
+
+
+
 
     </div>
-
   </body>
 </html>
