--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-tours - SignUp</title>
     <link rel="icon" href="../images/Icon.png" />
-    <link rel="stylesheet" href="../css/sign-in.css" />
+    <link rel="stylesheet" href="../css/sign-up.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +20,55 @@
         <img src="../images/Logo.png" >
       </div>
         
-      <!-- Type your code here -->
+      <div class="sign-up">
+        <div id ="hedder">
+          <img  src="..\images\Signup\Signup.png">
+        </div>
+
+        <p> Sign up </p>
+
+        <div class="inputs">
+          <input id="F-name" type="text" placeholder="First Name" required> 
+          <input id="L-name" type="text" placeholder="Last Name" required> <br>
+          <input id="Email" type="email" placeholder="Email" required> <br>
+          <input id="password" type="password" placeholder="Password" required ><br>
+          <input id="C-password" type="password" placeholder="Confirm Password" required ><br>
+          <input id="S-in" type="submit" value="Sign up">
+        </div>
+
+        <div class="line">
+          <hr id="top">
+          <p >OR</p>
+          <hr id="bottom">
+        </div>
+
+        <div id="text">
+          <p>sing in using social networks</p>
+        </div>
+
+        <div class="google">
+          <img src="..\images\Signup\GoogleIcon.png">
+        </div>
+
+           <div id="google">
+            <a href="#">Cotinue with Google </a>          <br>
+           </div>
+
+        <div class="apple">
+          <img src="..\images\Signup\AppleIcon.png">
+        </div>
+
+           <div id="apple">
+            <a href="#">Cotinue with Apple </a> 
+           </div>
+
+           <div id="go">
+            <span>Got an account?</span>
+            <a href="#">Sign in</a>
+           </div>
+
+       </div>
+      
 
     </div>
 
