--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <ul>
             <li class="e"><a href="#">Home</a></li>
             <li class="e"><a href="#">Services</a></li>
-            <li class="e"><a href="#">Tours</a></li>
-            <li class="e"><a href="#">Contact us</a></li>
+            <li class="e"><a href="pages/Tours.html">Tours</a></li>
+            <li class="e"><a href="pages/Contact-us.html">Contact us</a></li>
           </ul>
         </div>
 
@@ -48,8 +48,8 @@
         </div>
         <div class="ls">
           <ul>
-            <li class="login"><a href="#">Login</a></li>
-            <li class="signup"><a href="#">Sign up</a></li>
+            <li class="login"><a href="pages/sign-in.html">Login</a></li>
+            <li class="signup"><a href="pages/sign-up.html">Sign up</a></li>
           </ul>
         </div>
       </header>
@@ -61,7 +61,7 @@
               <p>DISCOVER THE NATURAL NEW TRAVEL</p>
               <h1>Enjoy The <br />Best Moment Of Life</h1>
               <!-- use link -->
-              <a href="#">Discover More</a>
+              <a href="pages/Tours.html">Discover More</a>
             </div>
           </div>
           <!-- reservation section -->
@@ -136,9 +136,9 @@
             </p>
             <div class="sec2-links">
               <!-- link here -->
-              <a href="">Book Now</a>
+              <a href="pages/Tours.html">Book Now</a>
               <!-- link here -->
-              <a href="">About More</a>
+              <a href="pages/About-us.html">About More</a>
             </div>
           </div>
         </div>
@@ -221,7 +221,7 @@
               <div class="sec4-img-price">
                 <p>&pound; 2500</p>
                 <!-- link here -->
-                <a href="#">Book Now</a>
+                <a href="pages/Tour-Booking.html">Book Now</a>
               </div>
             </div>
             <div class="sec4-card">
@@ -282,7 +282,7 @@
           <h1>Prepare yourself &amp; let's explore the beauty of the world.</h1>
           <p>Start your digital adventure with forest.</p>
           <!-- link hear -->
-          <a href="#">Get Started a Trip</a>
+          <a href="pages/Tours.html">Get Started a Trip</a>
         </div>
         <!-- section 6 -->
         <div class="section6">
