--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     <div class="container">
       <header>
         <img class="logo" src="images/Logo.png" />
-
+  
         <div class="HeaderBar">
           <ul>
-            <li class="e"><a href="#">Home</a></li>
-            <li class="e"><a href="#">Services</a></li>
+            <li class="e"><a href="index.html">Home</a></li>
             <li class="e"><a href="pages/Tours.html">Tours</a></li>
             <li class="e"><a href="pages/Contact-us.html">Contact us</a></li>
+            <li class="e"><a href="pages/About-us.html">about us</a></li>
           </ul>
         </div>
-
+  
         <div class="searchDiv">
           <form action="#" class="searchInput">
             <input type="search" name="search" placeholder="Search..." />
@@ -47,11 +47,13 @@
           </form>
         </div>
         <div class="ls">
+  
           <ul>
             <li class="login"><a href="pages/sign-in.html">Login</a></li>
             <li class="signup"><a href="pages/sign-up.html">Sign up</a></li>
           </ul>
         </div>
+  
       </header>
       <!-- start of body -->
       <div class="mainContainer">
