--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -62,7 +62,7 @@
 
            <div id="go">
            <span>no account?</span>
-           <a href="#">Sign up</a>
+           <a href="../pages/sign-up.html">Sign up</a>
            </div>
 
        </div>
