--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -64,7 +64,7 @@
 
            <div id="go">
             <span>Got an account?</span>
-            <a href="#">Sign in</a>
+            <a href="../pages/sign-in.html">Sign in</a>
            </div>
 
        </div>
