--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -89,7 +89,7 @@
 
         <div id="go">
           <span>Got an account?</span>
-          <a href="#">Sign in</a>
+          <a href="../pages/sign-in.html">Sign in</a>
         </div>
       </div>
     </div>
