--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -24,7 +24,7 @@
 
       <div class="Sign-up">
         <div id ="hedder">
-          <img  src="..\images\login\login.png">
+          <img  src="..\images\Signup\Signup.png">
         </div>
 
         <p> Sign Up </p>
