edit some icon issues

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -25,7 +25,7 @@
 
       <div class="login">
         <div id="hedder">
-          <img src="./../images/login/Login.png" />
+          <img src="./../images/Login/Login.png" />
         </div>
 
         <p>Sign in</p>
